tests/negative/RepeatedFieldPattern.juvix
module RepeatedFieldPattern;

type T :=
  | t;

type R :=
  | mkR {
      a : T;
      b : T
    };

f : R -> T
  | mkR@{a := x; a := y} := x;
